--- a/konachan-web/learn/T1.html
+++ b/konachan-web/learn/T1.html
@@ -6,11 +6,139 @@
   </head>
 
   <body>
-    <h1>这是第一个标题</h1>
-    <h2>这是第二个标题</h2>
-    <h3>这是第三个标题</h3>
-    <p>这是第一个段落</p>
-    <p><a href="https://www.baidu.com">这是一个链接</a></p>
-    <p><img loading="lazy" src="image/物语系列.jpg" /><br /></p>
+    <div
+      id="container"
+      style="width: 1900px; background-color: rgb(255, 253, 231)"
+    >
+      <!--这是一个注释-->
+      <div id="header" style="background-color: rgb(248, 192, 89)">
+        <h1 style="text-align: center">
+          <a id="C1">Kissshot Acerolaorion Heartunderblade</a>
+        </h1>
+      </div>
+      <div
+        id="left-panel"
+        style="width: 150px; float: left; background-color: wheat"
+      >
+        left-panel<br />left-panel<br />left-panel<br />
+      </div>
+      <div
+        id="right-panel"
+        style="width: 150px; float: right; background-color: aqua"
+      >
+        right-panel<br />right-panel<br />right-panel<br />
+      </div>
+      <div id="content" style="width: 1600px; float: left">
+        <p style="text-align: center">
+          <img src="image/270px-43458686.jpg" alt="Heartunderblade" />
+        </p>
+        <hr />
+        <p>
+          <strong>忍野忍</strong>是<a
+            href="https://zh.moegirl.org.cn/%E8%A5%BF%E5%B0%BE%E7%BB%B4%E6%96%B0"
+            target="_blank"
+            style="text-decoration: none"
+            >西尾维新</a
+          >创作的轻小说《<a
+            href="https://zh.moegirl.org.cn/%E7%89%A9%E8%AF%AD%E7%B3%BB%E5%88%97"
+            target="_blank"
+            style="text-decoration: none"
+            >物语系列</a
+          >》及其衍生的动画、漫画等作品的登场角色。<br />
+          作为吸血鬼的本名<strong>姬丝秀忒·雅赛劳拉莉昂·刃下心</strong>（日语：<strong>キスショット・アセロラオリオン・ハートアンダーブレード</strong>；英语：<strong>
+            Acerolaorion Heartunderblade[1]</strong
+          >）。忍字可拆分成刃下心。人类时的本名<strong>雅赛劳拉</strong>（日语：<strong>アセロラ</strong>；英语：<strong>Acerola</strong>）。
+        </p>
+        <h2 style="background-color: aqua">简介</h2>
+        <hr />
+        <p style="font-family: Arial; color: violet">
+          原本是冷血的吸血鬼“<a href="#C1" style="text-decoration: none"
+            >姬丝秀忒·雅赛劳拉莉昂·刃下心</a
+          >
+          ”，有“铁血的热血的冷血的吸血鬼”、“怪异中的怪异”、“怪异杀手”、“怪异之王”之称。<br />
+          在变成吸血鬼之前是个人类贵族，本名为雅赛劳拉。
+          “美丽而高贵的公主”，其美丽高贵的程度，
+          甚至险些让垃圾君自杀（《续终物语》部分剧情），
+          在《业物语》中提到自愿被殊杀尊主吸血成为吸血鬼《伤物语》中被吸血鬼猎人追杀，
+          失去双手双脚，危机之下吸血阿良良木历，将其变成自己的吸血鬼眷属，保住了性命。
+          《伤物语》中被吸血鬼猎人追杀，失去双手双脚，危机之下吸血阿良良木历，
+          将其变成自己的吸血鬼眷属，保住了性命。<br />
+        </p>
+        <h2>性格</h2>
+        <hr />
+        <p>
+          自大傲慢的超S性格，货真价实的傲娇。<br />
+          自尊心极高，对阿良良木历的称赞之词没有承受力。虽然有过中期沉默寡言的角色设定，但实际却是个很健谈、话非常多的家伙。有着像是古人的说话方式。由于是在四百年前学习的日语，因此使用的日语很古风，会使用“吾（侬，わし）”、“汝（うぬ）”这样的文言称呼。<br />
+          虽然外型是小女孩，但本质上依然是吸血鬼，包含着魅魔的要素在内，因此对于卖肉行为毫不设防。在开放程度上连神原骏河也难以望其项背。由于种种原因现在非常萌历，如果被历亲吻嘴唇的话立马会从傲变为娇,最大的萌点是“创可贴”。<br />
+          受到自己出身地的影响，小忍是个红茶党，但也不会拒绝咖啡。<br />
+          在黄金周期间还养成了喜欢甜甜圈（Mister Donut
+          ,真实存在的品牌）的习惯，而历则猜测首先拿给小忍甜甜圈吃的人正是忍野咩咩。<br />
+          曾发誓“只要甜甜圈存在之一天，吾就不会毁灭人类！”。
+        </p>
+        <h2>怪异能力</h2>
+        <hr />
+        <p>
+          只有在历的身旁，忍才能使用些许吸血鬼的力量。<br />
+          例如：能量吸取的能力，会将怪异当做食物来吃掉；<br />
+          藏在影子里的能力，但是只能进入历和与历有血缘关系的人的影子；<br />
+          物质创造能力，在历的影子里的时候多少能够使用一些物质创造能力，虽然能够随心所欲的制作衣服，但是做出游戏机之类的东西已经是极限了；<br />
+          可以随便操纵自己的体重。<br />
+          由于历被夺走了其存在，被忍野咩咩束缚了其姓名，战斗力也几乎完全消失。<br />
+          但实际上，要想取回那些能力，对她来说是非常简单的事情——只要吸历的血，小忍就能一度程度上恢复吸血鬼的能力（作为副产物，历也会吸血鬼化），并且脱离历影子的束缚。（虽然还是不能相隔太远）<br />
+          《伪物语》中，小忍借由吸取历的血液变化成十八岁的外型，完虐称呼其“后期高龄者”的式神斧乃木余接。<br />
+          由于小忍几乎失去了吸血鬼的所有力量，称不上是正统吸血鬼，所以可以从容面对太阳光、大蒜和十字架。完全体时由于再生能力过于强大，也可以直面太阳。<br />
+        </p>
+        <h2>知识</h2>
+        <hr />
+        <p>
+          具备丰富的关于怪异的知识。以前的小忍虽身为“怪异杀手”，可以将怪异当做食物吃掉，但却声称“吾只负责吃，对食物之名毫无兴趣”。但在“叡考塾”的废墟与忍野咩咩共同居住期间，经过了长达几个月的英才教育——实际上是被忍野咩咩极为单方面灌输大量关于怪异的知识，小忍拥有了大量有关怪异的知识，亦可以称之为专家中的专家了。<br />
+          自称没有记住任何固有名词，也不会用名字来称呼人，而能明确记住全名的似乎只有历和历的妹妹火怜、月火。即便如此，小忍似乎还是会记住强者的名字，像是曾夺走她四肢的三名吸血鬼猎人的名字，小忍就记得非常清楚。<br />
+          小忍还宣称她即使记得人类的名字也无法分辨人类的外型，像是阿良良木火怜与阿良良木月火对小忍来说都是相同的存在，如果两人就站在小忍的面前，小忍当然可以依照外型差异来分辨，但是只要离开目光超过数分钟，小忍就会几乎忘记谁是谁了。<br />
+        </p>
+        <h2>人际</h2>
+        <hr />
+        <p>
+          春假时为激怒历，把羽川翼称作“携带口粮”。曾经打算通过吃掉羽川（最后吃掉的是奇洛金卡达），来促使历杀死自己（这是为了让历变回人类的唯一方法，小忍打算为此而死）。当时因为被羽川看穿了自杀的意图而敌视羽川。《伪物语》中，小忍将剪短头发的羽川翼称呼为“前任班长”。但此后因为在爱憎的感情上亦受到历的影响，小忍总是没办法讨厌羽川翼和战场原黑仪，还在历面前使用“翼姐姐（バサ姊）”和“原姐姐（ヶ原さん）”这样的亲热称呼。<br />
+          会用“轻佻小子”这种恶毒方式称呼忍野咩咩。忍痛恨忍野咩咩到骨子里，程度仅次于历。在与忍野咩咩朝夕相处的日子里，每天都要被迫接受忍野咩咩的言语轰炸。<br />
+          称呼千石抚子为“前发娘”。会因站在相同萝莉属性立场，无法坐视历性骚扰八九寺真宵的行径，但是也凭此拿来与历作交易，换甜甜圈吃。面对历对少女的不轨行为，经常施以“吸血鬼铁拳”制裁。<br />
+          曾经的主人：迪斯托比亚·维托索·殊杀尊主，决死的必死的万死的吸血鬼。如其名suicide，将自杀作为日常的吸血鬼。<br />
+          600年前，将人类“美丽公主”雅赛劳拉变为吸血鬼的原初吸血鬼。被吸血后，人类的“美丽公主”雅赛劳拉的灵魂进入天堂，在人间留下了吸血鬼的姬丝秀忒·雅赛劳拉莉昂·刃下心。因雅赛劳拉的血太过美味，殊杀尊主无法再接受其他任何人的血（体）液。<br />
+          现与小忍重逢后关系良好。<br />
+        </p>
+        <h2>外部链接与注释</h2>
+        <hr />
+        <h2>评论栏</h2>
+        <hr />
+        <p>
+          这是<em>第一个</em><br /><strong><i>段落</i></strong>
+        </p>
+        <hr />
+        <p>
+          <a
+            href="https://www.baidu.com/"
+            style="text-decoration: none"
+            target="_blank"
+            ><sub>这是</sub>一个<sup>链<sup>接</sup></sup></a
+          >
+        </p>
+        <hr />
+        <p>
+          My favorite color is <del>red</del> <ins>blue</ins>!<br />
+          <bdo dir="rtl"
+            >The <abbr title="World Health Organization">WHO</abbr> was founded
+            in 1948.</bdo
+          >
+        </p>
+        <p>
+          <a
+            href="https://baike.baidu.com/item/%E7%89%A9%E8%AF%AD%E7%B3%BB%E5%88%97/6434858?fr=aladdin/"
+            target="_blank"
+            ><img loading="lazy" src="image/物语系列.jpg"
+          /></a>
+        </p>
+        <p><br /></p>
+      </div>
+    </div>
+    <!--<iframe src="https://www.baidu.com" width="1600" height="800"></iframe>-->
   </body>
 </html>
