左右栏加入表格

--- a/konachan-web/learn/T3.html
+++ b/konachan-web/learn/T3.html
@@ -48,16 +48,11 @@
                 </ol>
             </div>
             <div class="col right-column">
-                <ol>
-                    <li>This is right-column</li>
-                    <li>This is right-column</li>
-                    <li>This is right-column</li>
-                    <li>This is right-column</li>
-                    <li>This is right-column</li>
-                    <li>This is right-column</li>
-                    <li>This is right-column</li>
-                    <li>This is right-column</li>
-                </ol>
+                <form>
+                    账号: <input type="text" name="账号"><br>
+                    密码: <input type="password" name="密码"><br>
+                    <input type="submit" value="登录">
+                </form>
             </div>
             <div class="col middle-column">
                 <p id="para-0">
@@ -125,6 +120,17 @@
                 </p>
             </div>
 
+        </div>
+    </div>
+    <div class="container login">
+        <div class="row">
+            <div class="col login">
+                <form class="form">
+                    账号: <input type="text" name="账号"><br>
+                    密码: <input type="password" name="密码"><br>
+                    <input type="submit" value="登录">
+                </form>
+            </div>
         </div>
     </div>
     <div class="container footer"></div>
